WONDER-67 ERXMigration InitialMigrationVersion has no effect